Created page with "Dieser Arbeitsbereich ist für die Verwendung mit dem [https://pypi.org/project/freecad-robust-mcp/ Robust MCP-Server] (verfügbar auf PyPI) konzipiert, der es KI-Assistenten wie [https://claude.ai Claude] ermöglicht, über natürliche Sprache mit FreeCAD zu interagieren. Die vollständige Dokumentation und der Quellcode sind unter [https://github.com/spkane/freecad-robust-mcp-and-more github/spkane/freecad-robust-mcp-and-more] zu finden, wo der MCP-Server, Bridge und e..."

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -8,11 +8,8 @@
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
+</p><p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Bridge und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some MFreeCAD acros used for various things, not necessary related to AI or the MCP work.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Key Features:</b>
 </p>
@@ -212,13 +209,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114044412
+Cached time: 20260114044844
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.072 seconds
-Preprocessor visited node count: 234/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.068 seconds
+Preprocessor visited node count: 233/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -228,16 +225,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.040      1 -total
- 23.86%    2.873      4 Template:Code
- 22.57%    2.718      4 Template:MenuCommand
- 15.33%    1.846      5 Template:Incode
- 14.68%    1.767      1 Template:TOCright
-  8.31%    1.001      3 Template:FileName
-  6.83%    0.822      3 Template:Button
+100.00%   20.038      1 -total
+ 18.28%    3.664      4 Template:MenuCommand
+ 18.22%    3.651      4 Template:Code
+ 16.52%    3.310      3 Template:Button
+ 14.84%    2.974      5 Template:Incode
+ 14.63%    2.931      3 Template:FileName
+  9.56%    1.916      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114044412 and revision id 1738065. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114044844 and revision id 1738068. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
