--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -9,18 +9,15 @@
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
 </p><p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Bridge und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
+</p><p><b>Wichtigste Merkmale:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Key Features:</b>
-</p>
-<ul><li>Toolbar controls for starting/stopping the MCP bridge.</li>
-<li>Status indicator showing connection state (green=running, red=stopped).</li>
-<li>XML-RPC server on configurable port (default: 9875).</li>
-<li>JSON-RPC socket server on configurable port (default: 9876).</li>
-<li>Headless mode support for automation and CI/CD pipelines.</li>
-<li>Thread-safe queue system ensuring safe FreeCAD operations.</li>
-<li>Configurable auto-start on FreeCAD launch.</li></ul>
-</div>
+<ul><li>Symbolleistensteuerelemente zum Starten/Beenden der MCP-Br&uuml;cke.</li>
+<li>Statusanzeige f&uuml;r den Verbindungsstatus (gr&uuml;n = l&auml;uft, rot = angehalten).</li>
+<li>XML-RPC-Server auf konfigurierbarem Port (Standard: 9875).</li>
+<li>JSON-RPC-Socket-Server auf konfigurierbarem Port (Standard: 9876).</li>
+<li>Unterst&uuml;tzung des Kopflos-Modus f&uuml;r Automatisierung und CI/CD-Pipelines.</li>
+<li>Thread-sicheres Warteschlangensystem f&uuml;r sichere FreeCAD-Operationen.</li>
+<li>Konfigurierbarer Autostart beim Start von FreeCAD.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p><span id="Via_Addon_Manager_(Recommended)"></span>
 </p>
@@ -209,13 +206,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114044844
+Cached time: 20260114045034
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 233/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 232/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -225,16 +222,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.038      1 -total
- 18.28%    3.664      4 Template:MenuCommand
- 18.22%    3.651      4 Template:Code
- 16.52%    3.310      3 Template:Button
- 14.84%    2.974      5 Template:Incode
- 14.63%    2.931      3 Template:FileName
-  9.56%    1.916      1 Template:TOCright
+100.00%   10.944      1 -total
+ 21.64%    2.368      4 Template:Code
+ 16.13%    1.765      1 Template:TOCright
+ 13.76%    1.506      3 Template:FileName
+ 13.72%    1.502      3 Template:Button
+ 12.98%    1.421      4 Template:MenuCommand
+ 11.02%    1.206      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114044844 and revision id 1738068. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045034 and revision id 1738070. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
