--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -43,12 +43,10 @@
 <h3><span id="Grafischer_Benutzeroberfl.C3.A4chenmodus"></span><span class="mw-headline" id="Grafischer_Benutzeroberfl&auml;chenmodus">Grafischer Benutzeroberfl&auml;chenmodus</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Symbolleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Symbolleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Switch to the <b>Robust MCP Bridge</b> workbench using the workbench selector</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Start Bridge</span> in the toolbar</li>
-<li>The status indicator turns green when running</li>
-<li>External MCP clients can now connect to localhost:9875 (XML-RPC) or localhost:9876 (Socket)</li></ol>
-</div>
+<ol><li>Mit der Arbeitsbereichsauswahl zum Arbeitsbereich <b>Robust MCP Bridge</b> wechseln.</li>
+<li>In der Symbolleiste auf <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Start Bridge</span> klicken.</li>
+<li>Die Statusanzeige wird w&auml;hrend der Ausf&uuml;hrung gr&uuml;n.</li>
+<li>Externe MCP-Clients k&ouml;nnen nun eine Verbindung zu localhost:9875 (XML-RPC) oder localhost:9876 (Socket) herstellen.</li></ol>
 <p>Um die Br&uuml;cke (Bridge) zu stoppen, in der Symbolleiste auf <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Bridge Stop</span> klicken.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Statusleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Statusleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p><p><span id="Headless_Mode"></span>
@@ -204,13 +202,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045244
+Cached time: 20260114045359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.048 seconds
-Preprocessor visited node count: 231/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.046 seconds
+Preprocessor visited node count: 230/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -220,16 +218,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.962      1 -total
- 22.45%    2.237      4 Template:Code
- 16.46%    1.640      5 Template:Incode
- 13.33%    1.328      1 Template:TOCright
- 13.16%    1.311      3 Template:Button
- 12.32%    1.227      4 Template:MenuCommand
- 12.04%    1.199      3 Template:FileName
+100.00%    8.155      1 -total
+ 25.51%    2.080      4 Template:Code
+ 14.26%    1.163      1 Template:TOCright
+ 13.39%    1.092      5 Template:Incode
+ 12.24%    0.998      4 Template:MenuCommand
+ 12.05%    0.983      3 Template:FileName
+ 10.45%    0.852      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045244 and revision id 1738073. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045359 and revision id 1738075. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
