--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -52,11 +52,8 @@
 </p><p><span id="Headless_Mode"></span>
 </p>
 <h3><span class="mw-headline" id="Kopfloser_Modus">Kopfloser Modus</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>For automation and CI/CD pipelines, the bridge can run without the GUI:
-</p>
-</div>
-<p><b>Linux:</b>
+<p>F&uuml;r Automatisierung und CI/CD-Pipelines kann die Br&uuml;cke ohne grafische Benutzeroberfl&auml;che ausgef&uuml;hrt werden:
+</p><p><b>Linux:</b>
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">freecadcmd</span> <span class="o">~/.</span><span class="n">local</span><span class="o">/</span><span class="n">share</span><span class="o">/</span><span class="n">FreeCAD</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">FreecadRobustMCPBridge</span><span class="o">/</span><span class="n">freecad_mcp_bridge</span><span class="o">/</span><span class="n">blocking_bridge</span><span class="o">.</span><span class="n">py</span>
 </pre></div>
@@ -202,13 +199,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045359
+Cached time: 20260114045516
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 230/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 229/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -218,16 +215,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.155      1 -total
- 25.51%    2.080      4 Template:Code
- 14.26%    1.163      1 Template:TOCright
- 13.39%    1.092      5 Template:Incode
- 12.24%    0.998      4 Template:MenuCommand
- 12.05%    0.983      3 Template:FileName
- 10.45%    0.852      3 Template:Button
+100.00%    9.952      1 -total
+ 23.00%    2.289      4 Template:Code
+ 19.54%    1.945      1 Template:TOCright
+ 13.73%    1.367      5 Template:Incode
+ 11.86%    1.180      4 Template:MenuCommand
+ 11.03%    1.097      3 Template:Button
+ 10.61%    1.056      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045359 and revision id 1738075. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045516 and revision id 1738077. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
