--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -66,10 +66,8 @@
 </p><p><span id="Configuration"></span>
 </p>
 <h2><span class="mw-headline" id="Konfiguration">Konfiguration</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Access preferences via <b>Edit &rarr; Preferences &rarr; Robust MCP Bridge</b> or <b>Robust MCP Bridge &rarr; MCP Bridge Preferences...</b>
+<p>Zugriff auf die Einstellungen &uuml;ber <b>Bearbeiten &rarr; Einstellungen &rarr; Robust MCP Bridge</b> oder <b>Robust MCP Bridge &rarr; MCP Bridge-Preferences...</b>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
@@ -199,15 +197,15 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045516
+Cached time: 20260114045551
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 229/1000000
-Post&#8208;expand include size: 2245/2097152 bytes
-Template argument size: 748/2097152 bytes
+CPU time usage: 0.042 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 228/1000000
+Post&#8208;expand include size: 2253/2097152 bytes
+Template argument size: 756/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -215,16 +213,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.952      1 -total
- 23.00%    2.289      4 Template:Code
- 19.54%    1.945      1 Template:TOCright
- 13.73%    1.367      5 Template:Incode
- 11.86%    1.180      4 Template:MenuCommand
- 11.03%    1.097      3 Template:Button
- 10.61%    1.056      3 Template:FileName
+100.00%   12.331      1 -total
+ 25.83%    3.185      4 Template:Code
+ 17.27%    2.130      1 Template:TOCright
+ 12.09%    1.491      3 Template:FileName
+ 12.09%    1.490      5 Template:Incode
+ 11.05%    1.362      3 Template:Button
+  9.80%    1.209      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045516 and revision id 1738077. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045551 and revision id 1738079. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
