--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -68,34 +68,32 @@
 <h2><span class="mw-headline" id="Konfiguration">Konfiguration</span></h2>
 <p>Zugriff auf die Einstellungen &uuml;ber <b>Bearbeiten &rarr; Einstellungen &rarr; Robust MCP Bridge</b> oder <b>Robust MCP Bridge &rarr; MCP Bridge-Preferences...</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
-<th>Setting</th>
-<th>Description</th>
-<th>Default
+<th>Einstellung</th>
+<th>Beschreibung</th>
+<th>Standard
 </th></tr>
 <tr>
 <td>Auto-start bridge</td>
-<td>Start bridge automatically when FreeCAD launches</td>
-<td>Disabled
+<td>Br&uuml;cke beim Start von FreeCAD automatisch starten</td>
+<td>Deaktiviert
 </td></tr>
 <tr>
 <td>Show status indicator</td>
-<td>Display connection status in FreeCAD's status bar</td>
-<td>Enabled
+<td>Anzeige des Verbindungsstatus in der Statusleiste von FreeCAD</td>
+<td>Aktiviert
 </td></tr>
 <tr>
 <td>XML-RPC Port</td>
-<td>Port for XML-RPC connections</td>
+<td>Port f&uuml;r XML-RPC-Verbindungen</td>
 <td>9875
 </td></tr>
 <tr>
 <td>Socket Port</td>
-<td>Port for JSON-RPC socket connections</td>
+<td>Port f&uuml;r JSON-RPC Socket-Verbindungen</td>
 <td>9876
 </td></tr></tbody></table>
-</div>
 <p><span typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge"><img alt="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
 </p><p><span id="Features_by_Mode"></span>
 </p>
@@ -197,13 +195,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045551
+Cached time: 20260114045715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.055 seconds
-Preprocessor visited node count: 228/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 227/1000000
 Post&#8208;expand include size: 2253/2097152 bytes
 Template argument size: 756/2097152 bytes
 Highest expansion depth: 4/100
@@ -213,16 +211,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.331      1 -total
- 25.83%    3.185      4 Template:Code
- 17.27%    2.130      1 Template:TOCright
- 12.09%    1.491      3 Template:FileName
- 12.09%    1.490      5 Template:Incode
- 11.05%    1.362      3 Template:Button
-  9.80%    1.209      4 Template:MenuCommand
+100.00%    9.492      1 -total
+ 24.93%    2.366      4 Template:Code
+ 13.71%    1.302      5 Template:Incode
+ 12.91%    1.225      1 Template:TOCright
+ 12.35%    1.172      4 Template:MenuCommand
+ 12.28%    1.166      3 Template:FileName
+ 11.59%    1.100      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045551 and revision id 1738079. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045714 and revision id 1738081. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
