--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -98,20 +98,19 @@
 </p><p><span id="Features_by_Mode"></span>
 </p>
 <h2><span class="mw-headline" id="Funktionen_nach_Modus">Funktionen nach Modus</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
-<th>Feature</th>
-<th>GUI Mode</th>
-<th>Headless Mode
+<th>Funktion</th>
+<th>Grafischer Benutzeroberfl&auml;chen-Modus</th>
+<th>Kopfloser Modus
 </th></tr>
 <tr>
-<td>Object creation</td>
+<td>Objekterstellung</td>
 <td>Yes</td>
 <td>Yes
 </td></tr>
 <tr>
-<td>Boolean operations</td>
+<td>Boolsche Verkn&uuml;pfungen</td>
 <td>Yes</td>
 <td>Yes
 </td></tr>
@@ -121,31 +120,30 @@
 <td>Yes
 </td></tr>
 <tr>
-<td>Macro execution</td>
+<td>Makro-Ausf&uuml;hrung</td>
 <td>Yes</td>
 <td>Yes
 </td></tr>
 <tr>
-<td>Document management</td>
+<td>Dokumentenverwaltung</td>
 <td>Yes</td>
 <td>Yes
 </td></tr>
 <tr>
-<td>Screenshots</td>
+<td>Bildschirmaufnahmen</td>
 <td>Yes</td>
 <td>No
 </td></tr>
 <tr>
-<td>Object colors/visibility</td>
+<td>Objektfarben/-sichtbarkeit</td>
 <td>Yes</td>
 <td>No
 </td></tr>
 <tr>
-<td>Camera/view control</td>
+<td>Kamera-/Ansichtssteuerung</td>
 <td>Yes</td>
 <td>No
 </td></tr></tbody></table>
-</div>
 <p><span id="Connecting_MCP_Clients"></span>
 </p>
 <h2><span class="mw-headline" id="MCP-Clients_verbinden">MCP-Clients verbinden</span></h2>
@@ -195,13 +193,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045715
+Cached time: 20260114045927
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 227/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 226/1000000
 Post&#8208;expand include size: 2253/2097152 bytes
 Template argument size: 756/2097152 bytes
 Highest expansion depth: 4/100
@@ -211,16 +209,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.492      1 -total
- 24.93%    2.366      4 Template:Code
- 13.71%    1.302      5 Template:Incode
- 12.91%    1.225      1 Template:TOCright
- 12.35%    1.172      4 Template:MenuCommand
- 12.28%    1.166      3 Template:FileName
- 11.59%    1.100      3 Template:Button
+100.00%    9.045      1 -total
+ 22.31%    2.018      4 Template:Code
+ 16.29%    1.473      1 Template:TOCright
+ 13.20%    1.194      4 Template:MenuCommand
+ 12.34%    1.116      5 Template:Incode
+ 12.15%    1.099      3 Template:Button
+ 12.00%    1.085      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045714 and revision id 1738081. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045927 and revision id 1738083. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
