--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -1,8 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Cut Object For Magnets/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Cut+Object+For+Magnets&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Cut_Object_For_Magnets.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Cut Object For Magnets (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Cut_Object_For_Magnets.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Cut Object For Magnets (4% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -14,7 +13,7 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Schneidet ein Objekt entlang einer Ebene und f&uuml;gt ausgerichtete Magnetl&ouml;cher mit Oberfl&auml;chenkollisionserkennung hinzu. Erstellt zwei Teile mit perfekt ausgerichteten L&ouml;chern zum Einbetten von Magneten, mit denen die Teile zusammengesteckt werden k&ouml;nnen.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">Werkzeugleistensymbol</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
@@ -26,7 +25,7 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">Werkzeugleistensymbol</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Links
@@ -62,7 +61,7 @@ Macro Cut Object for Magnets
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../Part_Slice.html" title="Part Slice">Part Slice</a>, <a href="../PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a>
+<td class="ctEven"><a href="../de/Part_Slice.html" title="Part Slice/de">Part Zerschneiden</a>, <a href="../de/PartDesign_Hole.html" title="PartDesign Hole/de">PartDesign Bohrung</a>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -71,7 +70,6 @@ Macro Cut Object for Magnets
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -251,29 +249,29 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195122
+Cached time: 20260114051940
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.061 seconds
+CPU time usage: 0.037 seconds
+Real time usage: 0.049 seconds
 Preprocessor visited node count: 159/1000000
-Post&#8208;expand include size: 3364/2097152 bytes
-Template argument size: 1252/2097152 bytes
+Post&#8208;expand include size: 3467/2097152 bytes
+Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 891/5000000 bytes
+Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.723      1 -total
- 41.39%    3.611      1 Template:Macro
- 35.47%    3.094      1 Template:CodeDownload
- 18.98%    1.656      3 Template:FileName
+100.00%    5.516      1 -total
+ 41.10%    2.267      1 Template:Macro
+ 26.90%    1.484      3 Template:FileName
+ 26.25%    1.448      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195122 and revision id 1737950. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114051940 and revision id 1738085. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
