--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -79,19 +79,17 @@ Macro Cut Object for Magnets
 <ul><li>Die Erstellung mehrteiliger Drucke, die mit eingebetteten Magneten zusammengef&uuml;gt werden.</li>
 <li>Die Aufteilung gro&szlig;er Objekte f&uuml;r kleinere 3D-Druckerbett, wobei die Ausrichtung beibehalten wird.</li>
 <li>Das Hinzuf&uuml;gen magnetischer Verschlussmechanismen zu Geh&auml;usen und H&uuml;llen.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Key Features:</b>
+<p><b>Wichtigste Merkmale:</b>
 </p>
-<ul><li>Cut along preset planes (XY, XZ, YZ) or model datum planes.</li>
-<li>Automatic hole placement with even distribution along the cut edge.</li>
-<li>Surface collision detection prevents holes from breaking through walls.</li>
-<li>Configurable hole diameter, depth, and count.</li>
-<li>Preferred and minimum edge clearance settings.</li>
-<li>Smart repositioning of holes when initial placement fails safety checks.</li>
-<li>Creates PartDesign::Body objects with parametric Hole features.</li>
-<li>Supports re-cutting already-cut objects (preserves existing holes).</li>
-<li>Automatically separates the two parts for easy viewing.</li></ul>
-</div>
+<ul><li>Schneiden entlang voreingestellter Ebenen (XY, XZ, YZ) oder Modellbezugsebenen.</li>
+<li>Automatische Lochplatzierung mit gleichm&auml;&szlig;iger Verteilung entlang der Schnittkante.</li>
+<li>Die Oberfl&auml;chenkollisionserkennung verhindert, dass L&ouml;cher W&auml;nde durchbrechen.</li>
+<li>Konfigurierbarer Lochdurchmesser, Tiefe und Anzahl.</li>
+<li>Einstellungen f&uuml;r bevorzugten und minimalen Kantenabstand.</li>
+<li>Intelligente Neupositionierung von L&ouml;chern, wenn die anf&auml;ngliche Platzierung die Sicherheitspr&uuml;fungen nicht besteht.</li>
+<li>Erstellt PartDesign::Body-Objekte mit parametrischen Lochfunktionen.</li>
+<li>Unterst&uuml;tzt das erneute Schneiden bereits geschnittener Objekte (beh&auml;lt vorhandene L&ouml;cher bei).</li>
+<li>Trennt die beiden Teile automatisch f&uuml;r eine einfache Ansicht.</li></ul>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -249,13 +247,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114051940
+Cached time: 20260114052102
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 159/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.051 seconds
+Preprocessor visited node count: 158/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -265,13 +263,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.516      1 -total
- 41.10%    2.267      1 Template:Macro
- 26.90%    1.484      3 Template:FileName
- 26.25%    1.448      1 Template:CodeDownload
+100.00%    6.417      1 -total
+ 50.43%    3.236      1 Template:Macro
+ 27.09%    1.738      1 Template:CodeDownload
+ 18.09%    1.161      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114051940 and revision id 1738085. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052102 and revision id 1738087. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
