Created page with "'''Schneidevorgang:''' # Erstellt einen großen Halbraumkasten, der an der Schnittebene ausgerichtet ist. # Teilt das Objekt mithilfe boolescher Operationen in zwei Teile. # Erstellt PartDesign::Body-Container für jede Hälfte."

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -119,13 +119,11 @@ Macro Cut Object for Magnets
 <p><span id="How_It_Works"></span>
 </p>
 <h2><span class="mw-headline" id="Wie_es_funktioniert">Wie es funktioniert</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Cutting Process:</b>
+<p><b>Schneidevorgang:</b>
 </p>
-<ol><li>Creates a large half-space box aligned with the cutting plane.</li>
-<li>Uses boolean operations to split the object into two parts.</li>
-<li>Creates PartDesign::Body containers for each half.</li></ol>
-</div>
+<ol><li>Erstellt einen gro&szlig;en Halbraumkasten, der an der Schnittebene ausgerichtet ist.</li>
+<li>Teilt das Objekt mithilfe boolescher Operationen in zwei Teile.</li>
+<li>Erstellt PartDesign::Body-Container f&uuml;r jede H&auml;lfte.</li></ol>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Hole Placement Algorithm:</b>
 </p>
@@ -247,13 +245,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052102
+Cached time: 20260114052218
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.051 seconds
-Preprocessor visited node count: 158/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 157/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -263,13 +261,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.417      1 -total
- 50.43%    3.236      1 Template:Macro
- 27.09%    1.738      1 Template:CodeDownload
- 18.09%    1.161      3 Template:FileName
+100.00%    5.923      1 -total
+ 44.10%    2.612      1 Template:Macro
+ 32.67%    1.935      1 Template:CodeDownload
+ 18.80%    1.114      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052102 and revision id 1738087. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052218 and revision id 1738089. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
