Created page with "# Ein Dokument mit dem Objekt öffnen, das ausgeschnitten werden soll. # Optional das Objekt und/oder eine Bezugsebene auswählen, bevor das Makro ausgeführt wird. # Das Makro über '''Makro → Makros → CutObjectForMagnets → Ausführen''' ausführen. # Im Dialogfeld: #* Den auszuschneidenden Körper aus der Klappliste-Liste auswählen. #* Den Typ der Schnittebene (Voreingestellt oder Modellebene) auswählen. #* Für voreingestellte Ebenen den Versatz vom Ursprung f..."

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -93,22 +93,20 @@ Macro Cut Object for Magnets
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Open a document with the object you want to cut.</li>
-<li>Optionally select the object and/or a datum plane before running the macro.</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; CutObjectForMagnets &rarr; Execute</b>.</li>
-<li>In the dialog:
-<ul><li>Select the body to cut from the dropdown.</li>
-<li>Choose the cut plane type (Preset or Model Plane).</li>
-<li>For preset planes, set the offset from origin.</li>
-<li>Configure magnet hole parameters:
-<ul><li><b>Diameter</b>: Hole diameter (should match your magnet size).</li>
-<li><b>Depth</b>: Hole depth from cut surface.</li>
-<li><b>Number of Holes</b>: Total holes to create.</li>
-<li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface.</li>
-<li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance.</li></ul></li></ul></li>
-<li>Click "Execute Cut".</li></ol>
-</div>
+<ol><li>Ein Dokument mit dem Objekt &ouml;ffnen, das ausgeschnitten werden soll.</li>
+<li>Optional das Objekt und/oder eine Bezugsebene ausw&auml;hlen, bevor das Makro ausgef&uuml;hrt wird.</li>
+<li>Das Makro &uuml;ber <b>Makro &rarr; Makros &rarr; CutObjectForMagnets &rarr; Ausf&uuml;hren</b> ausf&uuml;hren.</li>
+<li>Im Dialogfeld:
+<ul><li>Den auszuschneidenden K&ouml;rper aus der Klappliste-Liste ausw&auml;hlen.</li>
+<li>Den Typ der Schnittebene (Voreingestellt oder Modellebene) ausw&auml;hlen.</li>
+<li>F&uuml;r voreingestellte Ebenen den Versatz vom Ursprung festlegen.</li>
+<li>Die Parameter f&uuml;r die Magnetl&ouml;cher konfigurieren:
+<ul><li><b>Diameter</b>: Lochdurchmesser (sollte Ihrer Magnetgr&ouml;&szlig;e entsprechen).</li>
+<li><b>Depth</b>: Lochtiefe von der Schnittfl&auml;che aus.</li>
+<li><b>Number of Holes</b>: Gesamtzahl der zu erstellenden L&ouml;cher.</li>
+<li><b>Edge Clearance (Preferred)</b>: Idealer Abstand vom Lochrand zur Objektoberfl&auml;che.</li>
+<li><b>Edge Clearance (Minimum)</b>: Mindestabstand.</li></ul></li></ul></li>
+<li>"Execute Cut" (Schnitt ausf&uuml;hren) klicken.</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260106015545&amp;.html" class="mw-file-description"><img src="../File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="442" class="mw-file-element" data-file-width="994" data-file-height="1098"></a><figcaption></figcaption></figure>
 <p><span id="Example"></span>
 </p>
@@ -245,13 +243,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052218
+Cached time: 20260114052541
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
+CPU time usage: 0.036 seconds
 Real time usage: 0.053 seconds
-Preprocessor visited node count: 157/1000000
+Preprocessor visited node count: 156/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -261,13 +259,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.923      1 -total
- 44.10%    2.612      1 Template:Macro
- 32.67%    1.935      1 Template:CodeDownload
- 18.80%    1.114      3 Template:FileName
+100.00%    9.141      1 -total
+ 43.32%    3.960      1 Template:Macro
+ 28.04%    2.563      3 Template:FileName
+ 23.53%    2.151      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052218 and revision id 1738089. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052541 and revision id 1738091. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
