--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -120,7 +120,7 @@ Macro Cut Object for Magnets
 <p><b>Schneidevorgang:</b>
 </p>
 <ol><li>Erstellt einen gro&szlig;en Halbraumkasten, der an der Schnittebene ausgerichtet ist.</li>
-<li>Teilt das Objekt mithilfe boolescher Operationen in zwei Teile.</li>
+<li>Teilt das Objekt mithilfe boolescher Verkn&uuml;pfungen in zwei Teile.</li>
 <li>Erstellt PartDesign::Body-Container f&uuml;r jede H&auml;lfte.</li></ol>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Hole Placement Algorithm:</b>
@@ -243,12 +243,12 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052541
+Cached time: 20260114052607
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.053 seconds
+CPU time usage: 0.038 seconds
+Real time usage: 0.049 seconds
 Preprocessor visited node count: 156/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
@@ -259,13 +259,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.141      1 -total
- 43.32%    3.960      1 Template:Macro
- 28.04%    2.563      3 Template:FileName
- 23.53%    2.151      1 Template:CodeDownload
+100.00%    6.704      1 -total
+ 42.53%    2.851      1 Template:Macro
+ 27.53%    1.846      1 Template:CodeDownload
+ 25.40%    1.703      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052541 and revision id 1738091. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052607 and revision id 1738093. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
