--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -134,14 +134,12 @@ Macro Cut Object for Magnets
 <li>Increased inset from edge.</li>
 <li>Alternative positions along the perimeter.</li></ul></li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Safety Features:</b>
+<p><b>Sicherheitsmerkmale:</b>
 </p>
-<ul><li>Creates test cylinders to check if holes would break through walls.</li>
-<li>Validates each hole against both the top and bottom parts.</li>
-<li>Skips holes that cannot be safely placed.</li>
-<li>Reports repositioned and skipped holes in the console.</li></ul>
-</div>
+<ul><li>Erstellt Testzylinder, um zu &uuml;berpr&uuml;fen, ob L&ouml;cher die W&auml;nde durchbrechen w&uuml;rden.</li>
+<li>&Uuml;berpr&uuml;ft jedes Loch sowohl am oberen als auch am unteren Teil.</li>
+<li>&Uuml;berspringt L&ouml;cher, die nicht sicher platziert werden k&ouml;nnen.</li>
+<li>Meldet neu positionierte und &uuml;bersprungene L&ouml;cher in der Konsole.</li></ul>
 <p><span id="Parameters"></span>
 </p>
 <h2><span class="mw-headline" id="Parameter">Parameter</span></h2>
@@ -243,13 +241,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052607
+Cached time: 20260114052636
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 156/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 155/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -259,13 +257,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.704      1 -total
- 42.53%    2.851      1 Template:Macro
- 27.53%    1.846      1 Template:CodeDownload
- 25.40%    1.703      3 Template:FileName
+100.00%    6.500      1 -total
+ 44.69%    2.905      1 Template:Macro
+ 26.82%    1.743      3 Template:FileName
+ 24.42%    1.587      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052607 and revision id 1738093. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052636 and revision id 1738095. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
