Created page with "{| class="wikitable" ! Parameter !! Beschreibung !! Standard |- | Plane Type || "Voreingestellte Ebene" (XY/XZ/YZ) oder "Modellebene" (Bezugsebene) || Preset Plane |- | Offset || Abstand vom Ursprung für voreingestellte Ebenen || 0 mm |- | Diameter || Magnetlochdurchmesser || 3 mm |- | Depth || Lochtiefe von der Schnittfläche || 3 mm |- | Number of Holes || Gesamtzahl der zu erstellenden Löcher || 6 |- | Edge Clearance (Preferred) || Idealer Abstand vom Lochrand zur O..."

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Cut Object For Magnets/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Cut+Object+For+Magnets&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Cut_Object_For_Magnets.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Cut Object For Magnets (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Cut_Object_For_Magnets.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Cut Object For Magnets (4% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -141,49 +141,47 @@ Macro Cut Object for Magnets
 <p><span id="Parameters"></span>
 </p>
 <h2><span class="mw-headline" id="Parameter">Parameter</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
 <th>Parameter</th>
-<th>Description</th>
-<th>Default
+<th>Beschreibung</th>
+<th>Standard
 </th></tr>
 <tr>
 <td>Plane Type</td>
-<td>"Preset Plane" (XY/XZ/YZ) or "Model Plane" (datum plane)</td>
+<td>"Voreingestellte Ebene" (XY/XZ/YZ) oder "Modellebene" (Bezugsebene)</td>
 <td>Preset Plane
 </td></tr>
 <tr>
 <td>Offset</td>
-<td>Distance from origin for preset planes</td>
+<td>Abstand vom Ursprung f&uuml;r voreingestellte Ebenen</td>
 <td>0 mm
 </td></tr>
 <tr>
 <td>Diameter</td>
-<td>Magnet hole diameter</td>
+<td>Magnetlochdurchmesser</td>
 <td>3 mm
 </td></tr>
 <tr>
 <td>Depth</td>
-<td>Hole depth from cut surface</td>
+<td>Lochtiefe von der Schnittfl&auml;che</td>
 <td>3 mm
 </td></tr>
 <tr>
 <td>Number of Holes</td>
-<td>Total holes to create</td>
+<td>Gesamtzahl der zu erstellenden L&ouml;cher</td>
 <td>6
 </td></tr>
 <tr>
 <td>Edge Clearance (Preferred)</td>
-<td>Ideal distance from hole edge to object surface</td>
+<td>Idealer Abstand vom Lochrand zur Objektoberfl&auml;che</td>
 <td>2 mm
 </td></tr>
 <tr>
 <td>Edge Clearance (Minimum)</td>
-<td>Minimum acceptable clearance (used during repositioning)</td>
+<td>Mindestabstand (wird bei der Neupositionierung verwendet)</td>
 <td>0.5 mm
 </td></tr></tbody></table>
-</div>
 <p><span id="Requirements"></span>
 </p>
 <h2><span class="mw-headline" id="Voraussetzungen">Voraussetzungen</span></h2>
@@ -235,29 +233,29 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114053153
+Cached time: 20260114053410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.048 seconds
-Preprocessor visited node count: 152/1000000
+CPU time usage: 0.046 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 151/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 892/5000000 bytes
+Unstrip post&#8208;expand size: 896/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.809      1 -total
- 42.35%    3.307      1 Template:Macro
- 33.92%    2.649      1 Template:CodeDownload
- 18.28%    1.427      3 Template:FileName
+100.00%    9.914      1 -total
+ 37.15%    3.683      1 Template:Macro
+ 29.46%    2.921      3 Template:FileName
+ 28.33%    2.809      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114053153 and revision id 1738103. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114053410 and revision id 1738105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
