Created page with "# Die FreeCAD-Python-Konsole ({{MenuCommand|Ansicht → Fenster → Python-Konsole}}) auf Fehlermeldungen überprüfen. # Sicherstellen, dass kein anderer Prozess die Ports 9875/9876 verwendet. # Versuchen, FreeCAD neu zu starten."

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -162,11 +162,9 @@
 <p><span id="Bridge_Won't_Start"></span>
 </p>
 <h3><span id="Br.C3.BCcke_startet_nicht"></span><span class="mw-headline" id="Br&uuml;cke_startet_nicht">Br&uuml;cke startet nicht</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages.</li>
-<li>Ensure no other process is using ports 9875/9876.</li>
-<li>Try restarting FreeCAD.</li></ol>
-</div>
+<ol><li>Die FreeCAD-Python-Konsole (<b>Ansicht &rarr; Fenster &rarr; Python-Konsole</b>) auf Fehlermeldungen &uuml;berpr&uuml;fen.</li>
+<li>Sicherstellen, dass kein anderer Prozess die Ports 9875/9876 verwendet.</li>
+<li>Versuchen, FreeCAD neu zu starten.</li></ol>
 <p><span id="Connection_Refused"></span>
 </p>
 <h3><span class="mw-headline" id="Verbindung_abgelehnt">Verbindung abgelehnt</span></h3>
@@ -191,15 +189,15 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114053617
+Cached time: 20260114053736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
+CPU time usage: 0.047 seconds
 Real time usage: 0.059 seconds
-Preprocessor visited node count: 225/1000000
-Post&#8208;expand include size: 2253/2097152 bytes
-Template argument size: 756/2097152 bytes
+Preprocessor visited node count: 224/1000000
+Post&#8208;expand include size: 2257/2097152 bytes
+Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -207,16 +205,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.861      1 -total
- 24.81%    2.695      4 Template:Code
- 20.78%    2.257      5 Template:Incode
- 12.34%    1.341      3 Template:FileName
- 11.90%    1.293      1 Template:TOCright
- 10.10%    1.097      4 Template:MenuCommand
-  8.96%    0.973      3 Template:Button
+100.00%   13.931      1 -total
+ 20.20%    2.814      4 Template:Code
+ 19.41%    2.704      1 Template:TOCright
+ 18.79%    2.618      5 Template:Incode
+ 12.16%    1.694      4 Template:MenuCommand
+  9.96%    1.388      3 Template:Button
+  9.06%    1.262      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053617 and revision id 1738109. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053736 and revision id 1738111. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
