Created page with "{{Macro |Name=Macro Multi Export |Name/de=Makro Mehrfach-Export |Icon=Macro_Multi_Export.png |Description=Ausgewählte Körper gleichzeitig in mehrere Dateiformate (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) exportieren. Mit einem benutzerfreundlichen Dialogfeld für die Formatauswahl und die Konfiguration der Ausgabe. |Author=Sean P. Kane |Version=0.6.1 |Date=2026-01-12 |FCVersion=0.21+ |Download=[https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Ma..."

--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -2,7 +2,6 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Multi_Export.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Multi Export (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Multi Export (6% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -14,7 +13,7 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Ausgew&auml;hlte K&ouml;rper gleichzeitig in mehrere Dateiformate (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) exportieren. Mit einem benutzerfreundlichen Dialogfeld f&uuml;r die Formatauswahl und die Konfiguration der Ausgabe.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">Werkzeugleistensymbol</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
@@ -26,7 +25,7 @@ Macro Multi Export
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">Werkzeugleistensymbol</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Links
@@ -62,7 +61,7 @@ Macro Multi Export
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../Std_Export.html" title="Std Export">Std Export</a>, <a href="../Import_Export.html" title="Import Export">Import Export</a>
+<td class="ctEven"><a href="../de/Std_Export.html" title="Std Export/de">Std Export</a>, <a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -71,7 +70,6 @@ Macro Multi Export
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -158,15 +156,15 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195550
+Cached time: 20260114054118
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.040 seconds
+CPU time usage: 0.029 seconds
+Real time usage: 0.045 seconds
 Preprocessor visited node count: 138/1000000
-Post&#8208;expand include size: 3189/2097152 bytes
-Template argument size: 1097/2097152 bytes
+Post&#8208;expand include size: 3255/2097152 bytes
+Template argument size: 1163/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -174,13 +172,13 @@ Unstrip post&#8208;expand size: 842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.084      1 -total
- 46.09%    2.343      1 Template:Macro
- 27.46%    1.396      1 Template:CodeDownload
- 21.77%    1.107      3 Template:FileName
+100.00%    6.532      1 -total
+ 43.16%    2.819      1 Template:Macro
+ 27.16%    1.774      1 Template:CodeDownload
+ 24.29%    1.587      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195550 and revision id 1737976. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054118 and revision id 1738117. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
