Created page with "'''Unterstützte Exportformate:''' * STL - Stereolithographie (üblich für den 3D-Druck) * STEP - Standard for Exchange of Product Data (CAD-Austausch) * 3MF - 3D Manufacturing Format (modernes 3D-Druckformat) * OBJ - Wavefront OBJ (3D-Grafiken und Spiel-Engines) * IGES - Initial Graphics Exchange Specification (veraltetes CAD-Format) * BREP - OpenCASCADE native format (bewahrt die exakte Geometrie) * PLY - Polygon File Format (3D-Scannen und -Drucken) * AMF - Additive..."

--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -74,19 +74,16 @@ Macro Multi Export
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Dieses Makro bietet eine bequeme M&ouml;glichkeit, ausgew&auml;hlte FreeCAD-Objekte gleichzeitig in mehrere Dateiformate zu exportieren. Anstatt jedes Format einzeln zu exportieren, k&ouml;nnen alle gew&uuml;nschten Formate in einem einzigen Dialogfeld ausgew&auml;hlt und gleichzeitig exportiert werden.
+</p><p><b>Unterst&uuml;tzte Exportformate:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Supported Export Formats:</b>
-</p>
-<ul><li>STL - Stereolithography (common for 3D printing)</li>
-<li>STEP - Standard for Exchange of Product Data (CAD interchange)</li>
-<li>3MF - 3D Manufacturing Format (modern 3D printing format)</li>
-<li>OBJ - Wavefront OBJ (3D graphics and game engines)</li>
-<li>IGES - Initial Graphics Exchange Specification (legacy CAD format)</li>
-<li>BREP - OpenCASCADE native format (preserves exact geometry)</li>
-<li>PLY - Polygon File Format (3D scanning and printing)</li>
-<li>AMF - Additive Manufacturing Format (XML-based 3D printing)</li></ul>
-</div>
+<ul><li>STL - Stereolithographie (&uuml;blich f&uuml;r den 3D-Druck)</li>
+<li>STEP - Standard for Exchange of Product Data (CAD-Austausch)</li>
+<li>3MF - 3D Manufacturing Format (modernes 3D-Druckformat)</li>
+<li>OBJ - Wavefront OBJ (3D-Grafiken und Spiel-Engines)</li>
+<li>IGES - Initial Graphics Exchange Specification (veraltetes CAD-Format)</li>
+<li>BREP - OpenCASCADE native format (bewahrt die exakte Geometrie)</li>
+<li>PLY - Polygon File Format (3D-Scannen und -Drucken)</li>
+<li>AMF - Additive Manufacturing Format (XML-basierter 3D-Druck)</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Features:</b>
 </p>
@@ -156,13 +153,13 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114054118
+Cached time: 20260114054254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.045 seconds
-Preprocessor visited node count: 138/1000000
+CPU time usage: 0.030 seconds
+Real time usage: 0.044 seconds
+Preprocessor visited node count: 137/1000000
 Post&#8208;expand include size: 3255/2097152 bytes
 Template argument size: 1163/2097152 bytes
 Highest expansion depth: 5/100
@@ -172,13 +169,13 @@ Unstrip post&#8208;expand size: 842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.532      1 -total
- 43.16%    2.819      1 Template:Macro
- 27.16%    1.774      1 Template:CodeDownload
- 24.29%    1.587      3 Template:FileName
+100.00%    8.656      1 -total
+ 62.29%    5.392      1 Template:Macro
+ 19.74%    1.709      1 Template:CodeDownload
+ 15.14%    1.311      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054118 and revision id 1738117. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054254 and revision id 1738119. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
