Created page with "'''Funktionen:''' * Exportiert in einem einzigen Vorgang in mehrere Formate. * Benutzerfreundlicher Dialog zur Formatauswahl. * Konfigurierbares Ausgabeverzeichnis und Basisdateiname. * Einstellungen für die Maschen-Toleranz für STL/OBJ/PLY/3MF/AMF-Exporte. * Vorschau der zu erstellenden Dateien. * Schnellauswahl-Schaltflächen: „Alle auswählen“, „Keine auswählen“, „Standardeinstellungen zurücksetzen“. * Standardformate: STL, STEP und 3MF sind vorgewählt."

--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -84,17 +84,15 @@ Macro Multi Export
 <li>BREP - OpenCASCADE native format (bewahrt die exakte Geometrie)</li>
 <li>PLY - Polygon File Format (3D-Scannen und -Drucken)</li>
 <li>AMF - Additive Manufacturing Format (XML-basierter 3D-Druck)</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Features:</b>
+<p><b>Funktionen:</b>
 </p>
-<ul><li>Export to multiple formats in a single operation.</li>
-<li>User-friendly dialog for format selection.</li>
-<li>Configurable output directory and base filename.</li>
-<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports.</li>
-<li>Preview of files to be created.</li>
-<li>Quick select buttons: "Select All", "Select None", "Reset Defaults".</li>
-<li>Default formats: STL, STEP, and 3MF are pre-selected.</li></ul>
-</div>
+<ul><li>Exportiert in einem einzigen Vorgang in mehrere Formate.</li>
+<li>Benutzerfreundlicher Dialog zur Formatauswahl.</li>
+<li>Konfigurierbares Ausgabeverzeichnis und Basisdateiname.</li>
+<li>Einstellungen f&uuml;r die Maschen-Toleranz f&uuml;r STL/OBJ/PLY/3MF/AMF-Exporte.</li>
+<li>Vorschau der zu erstellenden Dateien.</li>
+<li>Schnellauswahl-Schaltfl&auml;chen: &bdquo;Alle ausw&auml;hlen&ldquo;, &bdquo;Keine ausw&auml;hlen&ldquo;, &bdquo;Standardeinstellungen zur&uuml;cksetzen&ldquo;.</li>
+<li>Standardformate: STL, STEP und 3MF sind vorgew&auml;hlt.</li></ul>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -153,13 +151,13 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114054254
+Cached time: 20260114054333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.030 seconds
-Real time usage: 0.044 seconds
-Preprocessor visited node count: 137/1000000
+Real time usage: 0.043 seconds
+Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 3255/2097152 bytes
 Template argument size: 1163/2097152 bytes
 Highest expansion depth: 5/100
@@ -169,13 +167,13 @@ Unstrip post&#8208;expand size: 842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.656      1 -total
- 62.29%    5.392      1 Template:Macro
- 19.74%    1.709      1 Template:CodeDownload
- 15.14%    1.311      3 Template:FileName
+100.00%    5.790      1 -total
+ 40.33%    2.335      1 Template:Macro
+ 34.39%    1.991      1 Template:CodeDownload
+ 21.22%    1.229      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054254 and revision id 1738119. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054333 and revision id 1738121. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
