--- a/wiki/it/Macro_FCCamera.html
+++ b/wiki/it/Macro_FCCamera.html
@@ -191,12 +191,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Scaricare le icone dei file da <a rel="nofollow" class="external text" href="https://forum.freecad.org/download/file.php?id=79288">FCCamera_Icones.zip</a>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Scaricare la macro da Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/4aa545c23b323cf68824"><b>Macro FCCamera.FCMacro</b></a>
-</p>
-</div>
-<p><span id="Examples"></span>
+</p><p>Scaricare la macro da Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/4aa545c23b323cf68824"><b>Macro FCCamera.FCMacro</b></a>
+</p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Esempi">Esempi</span></h2>
 <p><span id="How_to_place_an_angle_hole"></span>
@@ -300,13 +296,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 <ul><li><b>ver 0.2 25/02/2015&nbsp;:</b> correct names files in for compatibility Linux (case sensitive) thanks microelly2</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114133534
+Cached time: 20260114133543
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.160 seconds
-Preprocessor visited node count: 336/1000000
+CPU time usage: 0.093 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 335/1000000
 Post&#8208;expand include size: 9062/2097152 bytes
 Template argument size: 2717/2097152 bytes
 Highest expansion depth: 5/100
@@ -316,15 +312,15 @@ Unstrip post&#8208;expand size: 14493/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.827      1 -total
-  5.04%    3.218      1 Template:Codeextralink
-  4.79%    3.056      1 Template:Macro/it
-  4.50%    2.871      3 Template:Code
-  3.74%    2.385     17 Template:KEY
-  2.39%    1.523      4 Template:Clear
+100.00%   44.851      1 -total
+  5.72%    2.564      1 Template:Macro/it
+  5.05%    2.267      3 Template:Code
+  3.90%    1.747      1 Template:Codeextralink
+  3.44%    1.542     17 Template:KEY
+  3.12%    1.397      4 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133534 and revision id 1738161. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133543 and revision id 1738163. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
